# mcp

./: README.md  client_g4f.py  client_gemini.py  mcp_client.py  patch_pydantic_main_fix.py  requirements.txt  test.py  test_g4f.py  test_gemini.py
mcp-server-test/: README.md  pyproject.toml
mcp-server-test/src/mcp_server_test/: server.py
mcp2-server-test/: README.md  server.py
mcp3-serverhttp-test/: README.md  client.py  pyproject.toml  server.py
